force-app/main/default/objects/Vehicle_Stock_Reservation__c/Vehicle_Stock_Reservation__c.object-meta.xml
<CustomObject>
    <description>Stock Reservation for Non C&amp;C MF</description>
    <label>Vehicle Stock Reservation</label>
    <nameField>
        <displayFormat>STKRES-{0000000}</displayFormat>
        <label>Vehicle Stock Reservation  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Stock Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>