force-app/main/default/objects/Vehicle_Stock_Reservation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle Stock Reservations</relationshipLabel>
    <relationshipName>Vehicle_Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>