force-app/main/default/objects/Vehicle_Stock_Reservation__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <label>Deposit Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>