force-app/main/default/objects/Vehicle_Stock_Reservation__c/fields/Person_Account_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Profiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account Profiling</label>
    <referenceTo>Person_Account_Profiling__c</referenceTo>
    <relationshipLabel>Vehicle Stock Reservations</relationshipLabel>
    <relationshipName>Vehicle_Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>