force-app/main/default/objects/Vehicle_Stock_Reservation__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Opportunity</label>
    <referenceTo>Sales_Opportunity__c</referenceTo>
    <relationshipName>RA_Used_Car_Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>