force-app/main/default/objects/Vehicle_Stock_Reservation__c/fields/Salesman_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Name__c</fullName>
    <formula>Sales_Opportunity__r.Salesman_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman Name</label>
    <type>Text</type>
</CustomField>