force-app/main/default/objects/Vehicle_Stock_Reservation__c/recordTypes/RA_Used_Car_Stock_Reservation_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Used_Car_Stock_Reservation_RT</fullName>
    <active>true</active>
    <label>RA Used Car Stock Reservation RT</label>
</RecordType>